tests/snapshots/spanshot_request@8454289191694196586.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: false
    eat_two_layers: false
    eat_inherited_ref_alone: true
  request: "&[[&x]]: &[&mut [T]]"
---
&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// Applying rule `Deref`
&x @ (&mut (*(*p).0).0 as &_): &T
// Applying rule `Deref`
x @ *(&mut (*(*p).0).0 as &_): T

// Final bindings:
let x: T = *(&mut (*(*p).0).0 as &_)
