tests/snapshots/spanshot_request@8463708883587593346.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: ResetBindingMode
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  request: "[mut x]: &[T]"
---
[mut x] @ p: &[T]
// Applying rule `ConstructorRef`
mut x @ &(*p).0: &T
// Applying rule `Binding`
mut x @ (*p).0: T

// Final bindings (simplified):
let mut x: T = (*p).0
