tests/snapshots/spanshot_request@8600061517761438038.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `&x: T`

&x @ p: T
// ERROR: no rules applies to &x @ p: T
